--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,31 @@
 
+<h1>Create a Team and Heroes!</h1>
+<br>
+
+<form action="/teams" method="post">
+  Team Name: <input type="text" name="team[name]"><br>
+  Team Motto: <input type="text" name="team[motto]">
+
+
+<h1>Hero 1</h1>
+
+  Hero's Name: <input type="text" name="team[hero][][name]"><br>
+  Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
+  Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
+
+
+<h1>Hero 2</h1>
+
+  Hero's Name: <input type="text" name="team[hero][][name]"><br>
+  Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
+  Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
+
+
+<h1>Hero 3</h1>
+
+  Hero's Name: <input type="text" name="team[hero][][name]"><br>
+  Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
+  Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
+<br>
+  <input type="submit" value="Submit"
+</form>
