Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -9,7 +9,7 @@
 
 <h1>Hero 1</h1>
 
-  Hero's Name: <input type="text" name="team[hero][][name]"><br>
+  Hero's Name: <input type="text" id="member1_name" name="team[hero][][name]"><br>
   Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
   Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
 
