--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -10,8 +10,8 @@
 <h1>Hero 1</h1>
 
   Hero's Name: <input type="text" id="member1_name" name="team[hero][][name]"><br>
-  Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
-  Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
+  Hero's Power: <input type ="text" id="member1_power" name ="team[hero][][power]"><br>
+  Heros' Biography: <input type="text" id="member1_bio" name="team[hero][][biography]"><br>
 
 
 <h1>Hero 2</h1>
