--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -23,9 +23,9 @@
 
 <h1>Hero 3</h1>
 
-  Hero's Name: <input type="text" name="team[hero][][name]"><br>
-  Hero's Power: <input type ="text" name ="team[hero][][power]"><br>
-  Heros' Biography: <input type="text" name="team[hero][][biography]"><br>
+  Hero's Name: <input type="text" id="member3_name" name="team[hero][][name]"><br>
+  Hero's Power: <input type ="text" id="member3_power" name ="team[hero][][power]"><br>
+  Heros' Biography: <input type="text" id="member3_bio" name="team[hero][][biography]"><br>
 <br>
   <input type="submit" value="Submit"
 </form>
