--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -27,5 +27,5 @@
   Hero's Power: <input type ="text" id="member3_power" name ="team[hero][][power]"><br>
   Heros' Biography: <input type="text" id="member3_bio" name="team[hero][][biography]"><br>
 <br>
-  <button id="submit" value="Submit"
+  <button id="submit" type="Submit"></button>
 </form>
