--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -9,23 +9,23 @@
 
 <h1>Hero 1</h1>
 
-  Hero's Name: <input type="text" id="member1_name" name="team[hero][][name]"><br>
-  Hero's Power: <input type ="text" id="member1_power" name ="team[hero][][power]"><br>
-  Heros' Biography: <input type="text" id="member1_bio" name="team[hero][][biography]"><br>
+  Hero Name: <input type="text" id="member1_name" name="team[hero][][name]"><br>
+  Hero Power: <input type ="text" id="member1_power" name ="team[hero][][power]"><br>
+  Hero Biography: <input type="text" id="member1_bio" name="team[hero][][biography]"><br>
 
 
 <h1>Hero 2</h1>
 
-  Hero's Name: <input type="text" id="member2_name" name="team[hero][][name]"><br>
-  Hero's Power: <input type ="text" id="member2_power" name ="team[hero][][power]"><br>
-  Heros' Biography: <input type="text" id="member2_bio" name="team[hero][][biography]"><br>
+  Hero Name: <input type="text" id="member2_name" name="team[hero][][name]"><br>
+  Hero Power: <input type ="text" id="member2_power" name ="team[hero][][power]"><br>
+  Hero Biography: <input type="text" id="member2_bio" name="team[hero][][biography]"><br>
 
 
 <h1>Hero 3</h1>
 
-  Hero's Name: <input type="text" id="member3_name" name="team[hero][][name]"><br>
-  Hero's Power: <input type ="text" id="member3_power" name ="team[hero][][power]"><br>
-  Heros' Biography: <input type="text" id="member3_bio" name="team[hero][][biography]"><br>
+  Hero Name: <input type="text" id="member3_name" name="team[hero][][name]"><br>
+  Hero Power: <input type ="text" id="member3_power" name ="team[hero][][power]"><br>
+  Hero Biography: <input type="text" id="member3_bio" name="team[hero][][biography]"><br>
 <br>
   <button id="submit" type="submit">Submit</button>
 </form>
