--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,31 +1,22 @@
+<h2>Create a Team and Heroes!</h2>
+<form method="POST" action="/teams">
+  Team Name: <input type="text" name="team[name]"><br />
+  Team Motto: <input type="text" name="team[motto]"><br />
 
-<h1>Create a Team and Heroes!</h1>
-<br>
+  <h3>Hero 1</h3>
+  Hero's Name: <input type="text" id="member1_name" name="team[members][][name]"><br />
+  Hero's Power: <input type="text" id="member1_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member1_bio" name="team[members][][bio]"><br />
 
-<form action="/teams" method="post">
-  Team Name: <input type="text" name="team[name]"><br>
-  Team Motto: <input type="text" name="team[motto]">
+  <h3>Hero 2</h3>
+  Hero's Name: <input type="text" id="member2_name" name="team[members][][name]"><br />
+  Hero's Power:<input type="text" id="member2_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member2_bio" name="team[members][][bio]"><br />
 
+  <h3>Hero 3</h3>
+  Hero's Name: <input type="text" id="member3_name" name="team[members][][name]"><br />
+  Hero's Power:<input type="text" id="member3_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member3_bio" name="team[members][][bio]"><br />
 
-<h1>Hero 1</h1>
-
-  Hero Name: <input type="text" id="member1_name" name="team[hero][][name]"><br>
-  Hero Power: <input type ="text" id="member1_power" name ="team[hero][][power]"><br>
-  Hero Biography: <input type="text" id="member1_bio" name="team[hero][][biography]"><br>
-
-
-<h1>Hero 2</h1>
-
-  Hero Name: <input type="text" id="member2_name" name="team[hero][][name]"><br>
-  Hero Power: <input type ="text" id="member2_power" name ="team[hero][][power]"><br>
-  Hero Biography: <input type="text" id="member2_bio" name="team[hero][][biography]"><br>
-
-
-<h1>Hero 3</h1>
-
-  Hero Name: <input type="text" id="member3_name" name="team[hero][][name]"><br>
-  Hero Power: <input type ="text" id="member3_power" name ="team[hero][][power]"><br>
-  Hero Biography: <input type="text" id="member3_bio" name="team[hero][][biography]"><br>
-<br>
   <button id="submit" type="submit">Submit</button>
 </form>
